syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "ChatServer";

package chat;

service ChatApi {
  rpc SendMessage (stream ChatMessage) returns (stream ChatMessage);
}

message ChatMessage {
  string name = 1;
  google.protobuf.Timestamp timestamp = 2;
  string message = 3;
}
